feat(auth): per-user Supabase auth + user-scoped data
Replaces the shared "default-user" model with proper per-user auth. The
backend now verifies Supabase-issued JWTs via SupabaseJwtFilter and
resolves the Supabase `sub` claim as the canonical user id. All tasks,
courses, and Google Calendar credentials are stored keyed by that id
so users can no longer see each other's data.

Because the Google OAuth callback is a top-level browser redirect with
no Authorization header, the user id is passed through via a signed
JWT in the `state` param (OAuthStateCodec) and verified on return.

Frontend adds a Supabase AuthContext, a global fetch interceptor that
attaches the Bearer token to every /api/** call, a hero "Sign up with
Google" CTA on the landing page, and a top-right sign-in / avatar menu
on every page via the AppShell.

Made-with: Cursor